k8s/deploymentWithPVC.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-pod-test
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvc-pod-test
  template:
    metadata:
      labels:
        app: pvc-pod-test
    spec:
      containers:
      - name: pvc-pod
        image: kevin77200/gh-action-test:${IMAGE_TAG}
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: "/data"
            name: custom-pvc
      imagePullSecrets:
      - name: dockerhub-secret
      volumes:
      - name: custom-pvc
        persistentVolumeClaim:
          claimName: custom-pvc
