k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gh-action-test-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: gh-action-test
  ports:
    - protocol: TCP
      port: 80          # Port that the service exposes
      targetPort: 80    # Port on the container to forward to
      nodePort: 30001
